--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
+  "author": "Varadarajan M",
   "license": "ISC",
-  "description": "",
+  "description": "This is an experimental api which extracts key-value pairs from an image",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.7",
